--- a/Pages/Categories/Index.cshtml
+++ b/Pages/Categories/Index.cshtml
@@ -29,3 +29,10 @@
     </tbody>
 </table>
 
+<p>
+    <a asp-page="Create" class=" btn btn-success">Create New</a>
+</p>
+<table class="table"></table>
+<thead>
+
+</thead>
