--- a/Pages/Products/Index.cshtml
+++ b/Pages/Products/Index.cshtml
@@ -37,6 +37,9 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.CategoryId)
                 </td>
+                <td>
+                    <a asp-page="./Delete" asp-route-id="@item.Id" class=" btn btn-danger">Delete</a>
+                </td>
               
             </tr>
         }
