--- a/Pages/Providers/Index.cshtml
+++ b/Pages/Providers/Index.cshtml
@@ -1,4 +1,50 @@
 ﻿@page
 @model SupermarketWEB.Pages.Providers.IndexModel
+
 @{
+    ViewData["Title"] = "Index Providers";
 }
+
+<h1>Index Providers</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Providers[0].Id)</th>
+            <th>@Html.DisplayNameFor(model => model.Providers[0].Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Providers[0].Address)</th>
+            <th>@Html.DisplayNameFor(model => model.Providers[0].Phone)</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.Providers)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Phone)
+                </td>
+                <td>
+                </td>
+            </tr>
+        }
+    </tbody>      
+</table>
+
+<p>
+    <a asp-page="Create" class=" btn btn-success">Create New</a>
+</p>
+<table class="table"></table>
+<thead>
+</thead>
+
+
