Actualizacion crear proveedores

--- a/Pages/Providers/Index.cshtml
+++ b/Pages/Providers/Index.cshtml
@@ -43,7 +43,7 @@
 <p>
     <a asp-page="Create" class=" btn btn-success">Create New</a>
 </p>
-<table class="table"></table>
+<table class="table"> 
 <thead>
 </thead>
 
