--- a/Pages/Providers/Create.cshtml
+++ b/Pages/Providers/Create.cshtml
@@ -35,3 +35,8 @@
         </form>
     </div>
 </div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
