--- a/Pages/Providers/Delete.cshtml
+++ b/Pages/Providers/Delete.cshtml
@@ -1,4 +1,43 @@
 ﻿@page
 @model SupermarketWEB.Pages.Providers.DeleteModel
 @{
+    ViewData["Title"] = "Delete";
 }
+
+<h1>Delete</h1>
+
+<h3>Are you sure you mant to delete this?</h3>
+<div>
+    <h4>Providers</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(Model => Model.Providers.Name)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(Model => Model.Providers.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(Model => Model.Providers.Address)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(Model => Model.Providers.Address)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(Model => Model.Providers.Phone)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(Model => Model.Providers.Phone)
+        </dd>
+    
+    </dl>
+
+    <form method="post">
+        <input type="hidden" asp-for="Providers.Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-page="./Index" class=" btn btn-primary">Back to List</a>
+    </form>
+</div>
+
+
+
