--- a/Pages/Providers/Index.cshtml
+++ b/Pages/Providers/Index.cshtml
@@ -34,6 +34,7 @@
                     @Html.DisplayFor(modelItem => item.Phone)
                 </td>
                 <td>
+                    <a asp-page="./Delete" asp-route-id="@item.Id" class=" btn btn-danger">Delete</a>
                 </td>
             </tr>
         }
