Clase Index PayMode

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4 fst-italic text-uppercase fw-bold" style="backgraound-color: #c9dbff33;">Bienvenidos</h1>
+    <p>Este proyecto consiste en el desarrollo de una aplicación web para la gestión integral de un supermercado. La plataforma está diseñada para cubrir tanto las necesidades del cliente como del personal administrativo, permitiendo la venta en línea de productos, la administración del inventario, el control de proveedores y la gestión de pedidos, entre otras funciones.</p>
 </div>
