--- a/Pages/PayModes/Delete.cshtml
+++ b/Pages/PayModes/Delete.cshtml
@@ -1,4 +1,34 @@
 ﻿@page
 @model SupermarketWEB.Pages.PayModes.DeleteModel
 @{
+    ViewData["Title"] = "Delete";
 }
+
+<h1>Delete</h1>
+
+<h3>Are you sure you mant to delete this?</h3>
+<div>
+    <h4>PayModes</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(Model => Model.PayMode.Name)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(Model => Model.PayMode.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(Model => Model.PayMode.Description)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(Model => Model.PayMode.Description)
+        </dd>
+
+    </dl>
+
+    <form method="post">
+        <input type="hidden" asp-for="PayMode.Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-page="./Index" class=" btn btn-primary">Back to List</a>
+    </form>
+</div>
