--- a/Pages/Shared/_LoginStatusPartial.cshtml
+++ b/Pages/Shared/_LoginStatusPartial.cshtml
@@ -1,10 +1,11 @@
-﻿@if(User.Identity.IsAuthenticated)
+﻿@if (User.Identity.IsAuthenticated)
 {
-    <form method=" post" class=" form-inline" asp-page="/Account/Logout">
+    <form method="post" class="form-inline" asp-page="/Account/Logout">
         Welcome @User.Identity.Name
-        <button type="submit" class"ml-2 btn-link">Logout</button> 
+        <button type="submit" class="ml-2 btn-link">Logout</button>
     </form>
-}else
+}
+else
 {
-    <a class=" btn btn-link" asp-page="/Account/Login">Login</a>
+    <a class="btn btn-link" asp-page="/Account/Login">Login</a>
 }
