Registro de Usuario con Base de datos

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/PayModes/Index">PayModes</a>
                         </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-page="/Account/Register">Register</a>
+                            </li>
+                        </>
+
                     </ul>
                 </div>
                 <div class=" mr-2">
